--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <!--Titolo e immagini-->
+    <header class="Parteiniziale">
          <h1>Il mio Viaggio a Londra</h1>
-
+         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+         <hr>
     </header>
     
 </body>
