--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--Titolo e immagini-->
-    <header class="Parteiniziale">
+    <header>
          <h1>Il mio Viaggio a Londra</h1>
          <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
          <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
@@ -57,10 +57,10 @@
     <div>
         <h3>Cose da fare</h3>
         <ul>
-        <li>Visitare la Tower of London </li>
-        <li>Visitare greenwich</li>
-        <li>Ascoltare un artista di strada a Convent Garden</li>
-        <li>Mangiare il tipico Fish And Chips inglese</li>
+        <li>Visitare la Tower of London &#10005</li>
+        <li>Visitare greenwich &#10003</li>
+        <li>Ascoltare un artista di strada a Convent Garden &#10003</li>
+        <li>Mangiare il tipico Fish And Chips inglese &#10005</li>
         </ul>
         <hr>
     </div>
@@ -86,9 +86,14 @@
                      <li><b>Volo di Ritorno</b>: Y1236X, ore 18:30 da London Heathrow</li>
                  </ul>
         </ol>
+        <hr>
+    </div>
 
-
-
+    <!--Foto finali-->
+    <div>
+        <h3>Le foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
     </div>
 </body>
 </html>
