--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <div>
         <h3>Cose da fare</h3>
         <ul>
-        <li>Visitare la Tower of London &#10005</li>
-        <li>Visitare greenwich &#10003</li>
-        <li>Ascoltare un artista di strada a Convent Garden &#10003</li>
-        <li>Mangiare il tipico Fish And Chips inglese &#10005</li>
+        <li>Visitare la Tower of London &#10005;</li>
+        <li>Visitare greenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Convent Garden &#10003;</li>
+        <li>Mangiare il tipico Fish And Chips inglese &#10005;</li>
         </ul>
         <hr>
     </div>
@@ -69,22 +69,25 @@
     <div>
         <h3>Info utili:</h3>
         <ol>
-            <li>Numeri utili di emergenza</li>
+            <li>Numeri utili di emergenza
                  <ul>
                      <li><b>999</b>-Emergenza</li>
                      <li><b>101</b>-Numero polizia</li>
                      <li><b>111</b>-Numero assistenza medica</li>
                  </ul>
-            <li>Hotel</li>
+            </li>     
+            <li>Hotel
                  <ul>
                      <li><b>Nome hotel</b>: Buckingam Palace</li>
                      <li><b>Indirizzo hotel</b>: Westminster, London SW1A 1AA, Regno Unito</li>
                  </ul>
-            <li>Aereo</li>
+            </li>    
+            <li>Aereo
                  <ul>
                      <li><b>Volo di Andata</b>: Y1234X, ore 9:30 da Milano Malpensa</li>
                      <li><b>Volo di Ritorno</b>: Y1236X, ore 18:30 da London Heathrow</li>
                  </ul>
+            </li>
         </ol>
         <hr>
     </div>
